// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage should render component correctly with custom image 1`] = `
<DocumentFragment>
  <img
    alt="Product Image"
    class="productImg undefined"
    src="./custom-image.png"
  />
</DocumentFragment>
`;

exports[`ProductImage should show the component with the product image 1`] = `
<DocumentFragment>
  <div
    class="productCard undefined"
  >
    <img
      alt="Product Image"
      class="productImg undefined"
      src="./coffee-mug2.png"
    />
  </div>
</DocumentFragment>
`;
